--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "parallax-js": "^3.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
